feat: finalizado rotas para usuario
