# src/routes/usuario.router.js
@@ -2,7 +2,6 @@ import { Router } from 'express';
 import { verificarSeRequestTemBody } from '../middlewares/request-body.js';
 import { validarToken } from '../middlewares/auth.js';
 import * as usuarioController from '../controllers/usuario.controller.js';
-import BadRequestError from '../errors/BadRequestError.js';
 
 const router = Router();
 
@@ -21,19 +20,12 @@ router.delete('/usuario', validarToken, async (req, res) => {
   res.sendStatus(204);
 });
 
-router.get('/usuarios', validarToken, async (req, res) => {
-  const email = req.query.email;
+router.get('/usuario/email/:email', validarToken, async (req, res) => {
+  const { email } = req.params;
 
-  if (!email) {
-    throw new BadRequestError(
-      "Informe o parâmetro 'email' para realizar a busca.",
-    );
-  }
+  const usuario = await usuarioController.obterUsuarioPorEmail(email);
 
-  const usuarios =
-    await usuarioController.obter5UsuariosQueEmailContemValor(email);
-
-  res.status(200).json(usuarios);
+  res.status(200).json(usuario);
 });
 
 export default router;
